# obs-scm-bridge

./: DEVELOP.md  Makefile  README.md  download_assets  obs-git  obs-git.service  obs-git.spec  obs-scm  obs-scm-bridge.spec  obs-scm.spec  obs_scm_bridge  obs_scm_bridge.py  obs_scm_bridge.spec  pyproject.toml
.github/workflows/: ci.yml
examples/: list_packages.py
obs_scm_bridge/: __init__.py  __main__.py  git.py  manifest.py
obs_scm_bridge/schema/: manifest_schema.json
test/: test_manifest.py  test_service.py
